--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,13 +6,13 @@
 
 <%# 'Super_cat' and 'Category' %>
 <script type="text/ng-template" id="categoryItemTemplate">
-  <div class="drop-down-menu__hdr">
+  <div class="drop-down-menu__hdr drop-down-menu__divider">
     <em>{{search.categories.title}}</em>
     <div ng-include src="'FilterItemBackButton'"></div>
   </div>
 
   <ul class="drop-down-menu__list">
-    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'" class="drop-down-menu__divider">
       <button ng-click="filterCategory( search.categories.field, category.code )" class="btn btn--full btn--full-left btn--pointer">{{ category.name }}</button>
     </li>
   </ul>
@@ -21,13 +21,13 @@
 
 <%# Category %>
 <script type="text/ng-template" id="SubCategoryTemplate">
-  <div class="drop-down-menu__hdr">
+  <div class="drop-down-menu__hdr drop-down-menu__divider">
     <em>{{search.categories.title}}</em>
     <div ng-include src="'FilterItemBackButton'"></div>
   </div>
 
   <ul class="drop-down-menu__list">
-    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'">
+    <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'" class="drop-down-menu__divider islet">
       <input ng-model="category.selected" ng-checked="category.selected" value="{{ category.code }}" id="category_{{ category.code }}" type="checkbox">
       <label for="category_{{ category.code }}">{{ category.name }}</label>
     </li>
@@ -66,7 +66,7 @@
         <%# Categories %>
         <li ng-show="filterIsAvailable(search.categories.values)">
 
-          <button ng-click="toggleFilter('category')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('category')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.categories.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -85,7 +85,7 @@
         <%# Retailers %>
         <li ng-if="filterIsAvailable(search.retailers.values)">
 
-          <button ng-click="toggleFilter('retailer')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('retailer')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.retailers.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -94,19 +94,20 @@
           <div ng-show="activeFilter === 'retailer'" class="filters__target">
             <span class="arrow arrow--up"></span>
 
-            <div class="drop-down-menu__hdr">
+            <div class="drop-down-menu__hdr drop-down-menu__divider">
               <em>{{ search.retailers.title }}</em>
               <div ng-include src="'FilterItemBackButton'"></div>
             </div>
 
-            <div class="drop-down-menu__search islet">
-              <input ng-model="storeSearch" class="txt-input" type="search" placeholder="Enter a store name">
+            <div class="drop-down-menu__divider islet">
+              <label for="filters-stores-search" class="hide-visually">Search stores</label>
+              <input ng-model="storeSearch" class="txt-input" type="search" placeholder="Enter a store name" id="filters-stores-search">
             </div>
 
             <ul class="drop-down-menu__list">
-              <li ng-repeat="retailer in search.retailers.values | nameStartsWith: storeSearch | limitTo: 250">
+              <li ng-repeat="retailer in search.retailers.values | nameStartsWith: storeSearch | limitTo: 250" class="drop-down-menu__divider islet">
                 <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox">
-                <label for="retailer_{{ retailer.code }}">{{ retailer.name }}</label>
+                <label for="retailer_{{ retailer.code }}" class="txt-truncate">{{ retailer.name }}</label>
               </li>
             </ul>
 
@@ -120,7 +121,7 @@
         <%# Brands %>
         <li ng-if="filterIsAvailable(search.brands.values)">
 
-          <button ng-click="toggleFilter('brand')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('brand')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.brands.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -129,19 +130,20 @@
           <div ng-show="activeFilter === 'brand'" class="filters__target">
             <span class="arrow arrow--up"></span>
 
-            <div class="drop-down-menu__hdr">
+            <div class="drop-down-menu__hdr drop-down-menu__divider">
               <em>{{ search.brands.title }}</em>
               <div ng-include src="'FilterItemBackButton'"></div>
             </div>
 
-            <div class="drop-down-menu__search islet">
-              <input ng-model="brandSearch" class="txt-input" type="search" placeholder="Enter a brand name">
+            <div class="drop-down-menu__divider islet">
+              <label for="filters-brands-search" class="hide-visually">Search stores</label>
+              <input ng-model="brandSearch" class="txt-input" type="search" placeholder="Enter a brand name" id="filters-brands-search">
             </div>
 
             <ul class="drop-down-menu__list">
-              <li ng-repeat="brand in search.brands.values | nameStartsWith: brandSearch | limitTo: 250">
+              <li ng-repeat="brand in search.brands.values | nameStartsWith: brandSearch | limitTo: 250" class="drop-down-menu__divider islet">
                 <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox">
-                <label for="brand_{{ brand.code }}">{{ brand.name }}</label>
+                <label for="brand_{{ brand.code }}" class="txt-truncate">{{ brand.name }}</label>
               </li>
             </ul>
 
@@ -155,7 +157,7 @@
         <%# Colours %>
         <li ng-if="filterIsAvailable(search.colours.values)">
 
-          <button ng-click="toggleFilter('colour')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('colour')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.colours.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -164,13 +166,13 @@
           <div ng-show="activeFilter === 'colour'" class="filters__target">
             <span class="arrow arrow--up"></span>
 
-            <div class="drop-down-menu__hdr">
+            <div class="drop-down-menu__hdr drop-down-menu__divider">
               <em>{{ search.colours.title }}</em>
               <div ng-include src="'FilterItemBackButton'"></div>
             </div>
 
             <ul class="drop-down-menu__list">
-              <li ng-repeat="colour in search.colours.values">
+              <li ng-repeat="colour in search.colours.values" class="drop-down-menu__divider islet">
                 <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox">
                 <label for="colour_{{ colour.code }}">{{ colour.name }}</label>
               </li>
@@ -186,7 +188,7 @@
         <%# Size %>
         <li ng-if="filterIsAvailable(search.sizes.values)">
 
-          <button ng-click="toggleFilter('size')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('size')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.sizes.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -195,13 +197,13 @@
           <div ng-show="activeFilter === 'size'" class="filters__target">
             <span class="arrow arrow--up"></span>
 
-            <div class="drop-down-menu__hdr">
+            <div class="drop-down-menu__hdr drop-down-menu__divider">
               <em>{{ search.sizes.title }}</em>
               <div ng-include src="'FilterItemBackButton'"></div>
             </div>
 
             <ul class="drop-down-menu__list">
-              <li ng-repeat="size in search.sizes.values">
+              <li ng-repeat="size in search.sizes.values" class="drop-down-menu__divider islet">
                 <label for="size_{{ size.code }}">{{ size.name }}</label>
                 <input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
               </li>
@@ -217,7 +219,7 @@
         <%# Price %>
         <li ng-if="filterIsAvailable(search.price.values)">
 
-          <button ng-click="toggleFilter('price')" class="filters__trigger drop-down-menu__hdr btn btn--full btn--pointer">
+          <button ng-click="toggleFilter('price')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.price.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
             <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
@@ -226,7 +228,7 @@
           <div ng-show="activeFilter === 'price'" class="filters__target">
             <span class="arrow arrow--up"></span>
 
-            <div class="drop-down-menu__hdr">
+            <div class="drop-down-menu__hdr drop-down-menu__divider">
               <em>{{ search.price.title }}</em>
               <div ng-include src="'FilterItemBackButton'"></div>
             </div>
