Removing deals and events from global search placeholder - WSF-5061

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -10,7 +10,7 @@
       <input type="search" class="search-mini__input" id="global-search"
         ng-model='searchQuery'
         name="search_query" autocomplete="off"
-        placeholder="Search stores, products, deals &amp; events&#8230;">
+        placeholder="Search stores &amp; products&#8230;">
       <input type='submit' value='Search Products' ng-hide='true'>
     <% end %>
     <%# //Search form %>
