Decreasing the top margin of the drop down offset

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -48,7 +48,7 @@
 
 <div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters filters--pin-board">
 
-  <h2 class="hide-visually">Filters</h2>
+  <h2 class="hide-visually">Filter products</h2>
 
   <div class="drop-down-menu drop-down-container">
 
