Events now use mywf.io and cloudinary

--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -238,6 +238,11 @@
     }
   }
 
+  /* The image */
+  .detail-view__media {
+    text-align: center;
+  }
+
   /* --Variations-- */
 
   /* Deal */
