--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,7 +10,12 @@
     </header>
 
     <div class="detail-view__media detail-view__mrg-base">
-      <%= image_tag @event.image(width: 638, retina: true), alt: @event.name, itemprop: "photo" %>
+      <%= fetch_image_tag @event.image,
+        alt: @event.name,
+        width: 1276,
+        crop: :limit,
+        quality: 25
+      %>
     </div>
 
     <h2 class="detail-view__hdr-sub hn">Event Details</h2>
