Image resize fixups for product show

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -63,8 +63,7 @@
               width: 938,
               height: 948,
               quality: 25,
-              crop: :pad,
-              effect: 'trim'
+              crop: :lpad
             ) %></li>
           <%- end -%>
         </ul>
@@ -77,8 +76,7 @@
               width: 938,
               height: 948,
               quality: 25,
-              crop: :pad,
-              effect: 'trim'
+              crop: :lpad
             ) %></li>
           <%- end -%>
         </ul>
