--- a/app/assets/javascripts/map/deferred_map.js.coffee.erb
+++ b/app/assets/javascripts/map/deferred_map.js.coffee.erb
@@ -35,8 +35,5 @@ do (proto = map.Micello.prototype, toProxy = ['setTarget', 'showLevel', 'zoom', 
   for name in toProxy
     proto[name] = do (name) -> (args...) ->
       func = -> @[name].apply(@, args)
-      if @deferred.state() == 'resolved'
-        func.apply(@map)
-      else
-        @deferred.then(func)
+      if @map then func.apply(@map) else @deferred.then(func)
       @
