Closing icon span element in product filters

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -69,7 +69,7 @@
           <button ng-click="toggleFilter('category')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.categories.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'category'" class="filters__target">
@@ -88,7 +88,7 @@
           <button ng-click="toggleFilter('retailer')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.retailers.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'retailer'" class="filters__target">
@@ -124,7 +124,7 @@
           <button ng-click="toggleFilter('brand')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.brands.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'brand'" class="filters__target">
@@ -160,7 +160,7 @@
           <button ng-click="toggleFilter('colour')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.colours.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'colour'" class="filters__target">
@@ -191,7 +191,7 @@
           <button ng-click="toggleFilter('size')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.sizes.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'size'" class="filters__target">
@@ -222,7 +222,7 @@
           <button ng-click="toggleFilter('price')" class="filters__trigger drop-down-menu__hdr drop-down-menu__divider btn btn--full btn--pointer">
             {{ search.price.title }}
             <span class="hide-fully--palm icon icon--arrow-down-full btn--pointer__icon" aria-hidden="true"></span>
-            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true">
+            <span class="hide-fully--non-palm icon icon--arrow-right-big icon--lrg btn--pointer__icon" aria-hidden="true"></span>
           </button>
 
           <div ng-show="activeFilter === 'price'" class="filters__target">
