Update grid and added new google map static module

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,6 +150,7 @@ Global stylesheet
   @import "partials/modules/widgets/social-media-share";
   @import "partials/modules/widgets/tabs";
   @import "partials/modules/widgets/tooltip";
+  @import "partials/modules/widgets/google-map-static";
 
 /* Forms */
 @import "partials/forms/base";
