--- a/app/assets/stylesheets/partials/layout/grid/_grid.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_grid.scss
@@ -67,6 +67,35 @@
 	> .grid__item {margin-bottom: 0;}
 }
 
+/* Double the bottom margin */
+@mixin bottom-dbl-classes($namespace: "") {
+	.#{$namespace}grid--bottom-dbl {
+		.grid__item {
+			@include respond-min($non-palm, $screen-only: true) {
+				@include to-rem(margin-bottom, $spacing-dbl);
+			}
+		}
+	}
+}
+
+/* --Output all the double bottom margin classes for the grid under specific breakpoints applied via specific classes (namespaced) e.g. `.lap-grid--bottom-dbl` (all pre-defined breakpoints)-- */
+
+/* Non-palm */
+@include respond-min($non-palm) {
+  @include bottom-dbl-classes("non-palm-");
+}
+
+/* Double the gutter */
+.grid--gutter-dbl {
+	/* Negative `margin-left` to negate the columns' gutters */
+	@include to-rem(margin-left, -$grid-gutter-dbl);
+
+	/* Grid item */
+	.grid__item {
+		@include to-rem(padding-left, $grid-gutter-dbl);
+	}
+}
+
 /* Center align */
 .grid--center > .grid__item {
 	margin-left: auto;
