--- a/app/assets/stylesheets/partials/layout/_containers.scss
+++ b/app/assets/stylesheets/partials/layout/_containers.scss
@@ -25,7 +25,7 @@
 .container--narrow {@include to-rem(max-width, $page-container-max-width-narrow);}
 
 /* Dark container */
-.container--dark {background: $color-med-txt;}
+.container--dark {background-color: $color-med-txt;}
 
 /* Position relative container */
 .container--position {position: relative;}
