--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="container--width container--dark">
+<div class="container--dark">
   <div class="container container--position">
     <!-- <div class="nav-contextual nav-contextual--dark">
       <div class="nav-contextual__clip">
