--- a/app/assets/stylesheets/partials/modules/_filters.scss
+++ b/app/assets/stylesheets/partials/modules/_filters.scss
@@ -4,7 +4,7 @@
 
 /*
   Usage:
-    Pin board filters and sorting.
+    Filters and sorting.
 
   Note:
     A lot of styles are being used from the 'Drop down menu' module.
@@ -28,14 +28,6 @@
       /* Hide the arrow pointer from 'Drop down' module */
       > .arrow {display: none;}
     }
-  }
-
-  /* Drop down trigger - need to make look like buttons at non-palm breakpoint */
-  .non-palm & .filters__trigger {
-    @extend .btn--main;
-    @extend .btn--main-alt4;
-    @extend .drop-down-menu__trigger;
-    border-bottom: 0;
   }
 }
 
@@ -80,6 +72,18 @@
         > .arrow {border-bottom-color: $color-off-white;}
       }
   }
+
+    /* Filter trigger (drop down trigger) - we need to toggle the display of the triggers between viewports as we have 2 triggers for each */
+    .filters__trigger {
+
+      &.hide-fully--palm {display: none !important;}
+
+      @include respond-min($non-palm) {
+        &.hide-fully--non-palm {display: none !important;}
+
+        &.hide-fully--palm {display: block !important;}
+      }
+    }
 
   /* Sort */
   .filters__sort-options {
