--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="container--dark">
+<div class="container container--wide container--dark">
   <div class="container container--position">
     <!-- <div class="nav-contextual nav-contextual--dark">
       <div class="nav-contextual__clip">
@@ -21,7 +21,7 @@
             </li>
           </ul>
         </nav>
-        <span class="nav-contextual__overlay icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
+        <span class="nav-contextual__clip-overlay icon icon--arrow-right icon--mega icon--flush-top" aria-hidden="true"></span>
       </div>
     </div> -->
 
