Fix PR feedback

--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -80,9 +80,7 @@
 /* Dark color */
 .nav-contextual--dark {
 
-  .nav-contextual__clip-inner {
-    border-bottom: 0;
-  }
+  .nav-contextual__clip-inner {border-bottom: 0;}
 
     .nav-contextual__list > li  {
       a {
