Added fine-print abstraction

--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -71,7 +71,7 @@
           </tbody>
         </table>
       </div>
-      <p><small>*2.5% surcharge on all credit card payments, parking <a href="#">terms &amp; conditions apply</a>.</small></p>
+      <small class="fine-print fine-print--center">*2.5% surcharge on all credit card payments, parking <a href="#">terms &amp; conditions apply</a>.</small>
     </div>
 
     <div class="grid__item non-palm-one-half">
