--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -112,6 +112,7 @@ Global stylesheet
 @import "partials/abstractions/box";
 @import "partials/abstractions/toggle-content";
 @import "partials/abstractions/angular-cloak";
+@import "partials/abstractions/fine-print";
 
 /* Modules */
 @import "partials/modules/feedback";
